<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/panel_change_password"
    style="@style/genie_panel_meter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shadow"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >
    <TextView
        style="@style/genie_panel_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/panel_about" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:text="@string/panel_about_main_text"
        android:textColor="@color/black" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:contentDescription="@string/panel_about_synergy"
        android:src="@drawable/synergy_logo" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/panel_about_mesl"
        android:src="@drawable/mesl_logo" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cse_logo" 
        android:contentDescription="@string/panel_about_cse"
        android:layout_weight="1"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ucsd_logo" 
        android:contentDescription="@string/panel_about_ucsd"
        android:layout_weight="1"/>
</LinearLayout>