<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/panel_change_password"
    style="@style/genie_panel_meter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shadow"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <TextView
        style="@style/genie_panel_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/panel_update_password" />

    <!-- Error Label -->
    <TextView
        android:id="@+id/settings_password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:minWidth="@dimen/common_min_width"
        android:textColor="@color/red"
        android:visibility="gone" />

    <!-- Password Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/common_min_width"
        android:text="@string/settings_new_password"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/settings_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:inputType="textPassword"
        android:minWidth="@dimen/common_min_width"
        android:singleLine="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dip"
        android:minWidth="@dimen/common_min_width"
        android:text="@string/settings_new_password_hint"
        android:textColor="@color/black" />

    <!-- Repeat Password Label -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/common_min_width"
        android:text="@string/settings_repeat_password"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/settings_repeat_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="5dip"
        android:inputType="textPassword"
        android:minWidth="@dimen/common_min_width"
        android:singleLine="true" />

    <!-- Repeat Password Label -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/common_min_width"
        android:text="@string/settings_old_password"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/settings_old_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="5dip"
        android:imeActionLabel="@string/panel_update_password_action"
        android:inputType="textPassword"
        android:minWidth="@dimen/common_min_width"
        android:singleLine="true" />

    <!-- Update Password Button -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip" >

        <Button
            android:id="@+id/settings_change_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:minWidth="@dimen/common_min_width"
            android:text="@string/panel_update_password_action" />

        <ProgressBar
            android:id="@+id/settings_change_password_progress"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/settings_change_password_button"
            android:layout_centerVertical="true"
            android:paddingRight="15dp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>